<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".Pregunta01">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="80dp"
            android:paddingVertical="20dp"
            android:text="@string/title"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imgView"
            android:src="@drawable/pokemon"
            android:contentDescription="@string/description"
            app:layoutDescription="@string/description"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintDimensionRatio="1:1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/btnMostrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textShow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnOcultar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/btnOcultar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textHide"
            app:layout_constraintStart_toEndOf="@id/btnMostrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>